tests/testcases/invalid/07_unknown_escape_in_char.ciel
int main() {
    char c = '\q'; // unknown escape in char
    return 0;
}
